# ChangeLog for net-analyzer/symon
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Do a safer pattern in sed when the user requested not to build the symux target

  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Instead of using sed and avoiding pre-stripping in src_unpack, make the
  package use the STRIP variable from the portage environment in src_compile

  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Instead of using sed and tc-getCC to call the correct gcc in src_unpack,
  make the package use the proper CC from the portage environment in
  src_compile

  10 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Avoid pre-stripping

  10 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Honour Gentoo CFLAGS

  10 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  symon-2.78-r1.ebuild:
  Fix hardcoded CC

  09 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> files/symon-init.d,
  +files/symux-init.d, -symon-2.78.ebuild, +symon-2.78-r1.ebuild:
  New USE flag 'symux' added, remove old

  08 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.78.ebuild:
  Added ~amd64 keyword

  07 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> symon-2.78.ebuild:
  Bump syweb, too

  07 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> -symon-2.77.ebuild,
  +symon-2.78.ebuild:
  Version bump, remove old

  06 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> +files/symon-init.d,
  +files/symon-symon.conf.patch, +files/symon-symux.conf.patch,
  +files/symon-syweb-class_lexer.inc.patch,
  +files/symon-syweb-setup.inc.patch,
  +files/symon-syweb-total_firewall.layout.patch, +metadata.xml,
  +symon-2.77.ebuild:
  New Ebuild for bug 176635
