@@ -7,6 +7,6 @@ AUX symon-syweb-total_firewall.layout.patch 1616 RMD160 08462a968ece585cba4331ba
 AUX symux-init.d 368 RMD160 1c493840c0574ead0387971020120be32e5f9948 SHA1 bbf1abf359042a1b120254182214b62faa56794e SHA256 090f20e13ef59590e7d9d4f8dd1db4b18a46cc5172ae6215d4bf551ecdc83fbe
 DIST symon-2.78.tar.gz 102400 RMD160 40ca61ce68778de54d5a1b541d6c640dd7fb479c SHA1 bbe7f2b58e3ed0e42f3b1da97ea4051d2c1cee34 SHA256 cda07388156e66a665c6d53dca4fdce3e210ee6a28c44e64d240715a572b39ac
 DIST syweb-0.57.tar.gz 40960 RMD160 a59c24402344c3d2ae44c4ff586c469289a5e6e8 SHA1 05762c6b472e161d7bae56b603e4eb8595323738 SHA256 d1a5bbec892488f5bbc1ef5b52fd512097421f4e6be8742ad18838d11f42d502
-EBUILD symon-2.78-r1.ebuild 3060 RMD160 e1fde762d91713f499f1f12ebefdc5d428406ae6 SHA1 4287eefa8c33cd5a0b9908c5c6d09c8630c656ff SHA256 00f57dd756689cc155eff5821209cb87d79d2f696f23b930c81109faf783ebbd
-MISC ChangeLog 1902 RMD160 c98d8c58ca34aba61b68e5031ca1ca45c2d80f07 SHA1 d0e80e26615766a66b2a3ad396418d4622ad4340 SHA256 a1d566a90c32a14b4cb2a3941d3ce9cd69daa77610cffc21180983a38790fe2a
+EBUILD symon-2.78-r1.ebuild 2994 RMD160 6905f946f98e5bdafeb144b237910733496e9a43 SHA1 ffe39d0a86d4ba2d805f90c1f3a64eacc3b30d44 SHA256 dc72503a528b701bd298cdfb99028ec68a43969721674f55730fe699bd2d5f20
+MISC ChangeLog 2101 RMD160 f0288d47aaa1576cef665ef48acaca14749de6de SHA1 8e50fa408b29373961948f2a34771e4d6b9f2394 SHA256 11d79151119453baffb9ec197b19293c31b1a2973031073d548b38ce2bb14d19
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
