@@ -4,6 +4,11 @@
 
   02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
   symon-2.78-r1.ebuild:
+  Put sed calls after epatch ones to prevent breaking patches, and use "${S}"
+  instead of hardcoding the directories
+
+  02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
+  symon-2.78-r1.ebuild:
   Do a safer pattern in sed when the user requested not to build the symux target
 
   02 Feb 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
